stopped navbar overlapping top of page

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,3 +12,7 @@
 .navbar    { margin-bottom: 10px; }
 .selectpicker  { padding-top:10px; }
 .nav-search-button { color:black; }
+
+body {
+  padding-top: 80px;
+}
